--- a/Front/vite-project/src/templates/about.html
+++ b/Front/vite-project/src/templates/about.html
@@ -32,12 +32,25 @@
           <li class="menu-item btn btn-secondary" id="dropdownAnimais"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
             <a href="#">Animais</a>
             <ul class="dropdown-menu">
-              <li class="menu-item dropdown-item"><a href=".animais_especies.html">Espécies</a></li>
-              <li class="menu-item dropdown-item"><a href=".animais_regioes.html">Regiões</a></li>
+              <li class="menu-item dropdown-item"><a href="./animais_especies.html">Espécies</a></li>
+              <li class="menu-item dropdown-item"><a href="./animais_regioes.html">Regiões</a></li>
             </ul>
           </li>
-          <li class="menu-item"><a href=".cadastro_voluntario.html">Voluntariado</a></li>
-          <li class="menu-item"><a href=".doacao.html">Doações</a></li>
+          <li class="menu-item btn btn-secondary" id="dropdownColab"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+            <a href="#">Colabore</a>
+            <ul class="dropdown-menu">
+              <li class="menu-item dropdown-item"><a href="./doacao.html">Doações</a></li>
+              <li class="menu-item dropdown-item"><a href="./apadrinhamento.html">Apadrinhamento</a></li>
+              <li class="menu-item dropdown-item"><a href="./cadastro_voluntario.html">Voluntariado</a></li>
+            </ul>
+          </li>
+          <li class="menu-item btn btn-secondary" id="dropdownConta"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+            <a href="#">Minha conta</a>
+            <ul class="dropdown-menu">
+              <li class="menu-item dropdown-item"><a href="./registro.html">Registro</a></li>
+              <li class="menu-item dropdown-item"><a href="./login.html">Login</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
       <div class="hdr-desktop">
@@ -53,8 +66,21 @@
               <li class="menu-item dropdown-item"><a href="./animais_regioes.html">Regiões</a></li>
             </ul>
           </li>
-          <li class="menu-item-dkt"><a href="./cadastro_voluntario.html">Voluntariado</a></li>
-          <li class="menu-item-dkt"><a href="./doacao.html">Doações</a></li>
+          <li class="menu-item btn btn-secondary" id="dropdownColabDkt"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+            <a href="#">Colabore</a>
+            <ul class="dropdown-menu-dkt">
+              <li class="menu-item dropdown-item"><a href="./doacao.html">Doações</a></li>
+              <li class="menu-item dropdown-item"><a href="./apadrinhamento.html">Apadrinhamento</a></li>
+              <li class="menu-item dropdown-item"><a href="./cadastro_voluntario.html">Voluntariado</a></li>
+            </ul>
+          </li>
+          <li class="menu-item btn btn-secondary" id="dropdownContaDkt"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+            <a href="#">Minha conta</a>
+            <ul class="dropdown-menu-dkt">
+              <li class="menu-item dropdown-item"><a href="./registro.html">Registro</a></li>
+              <li class="menu-item dropdown-item"><a href="./login.html">Login</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </nav>
