--- a/Front/vite-project/src/templates/about.html
+++ b/Front/vite-project/src/templates/about.html
@@ -163,29 +163,29 @@
       </ul>
     </section>
   </div>
-  <div class="card-container-title">
+  <div class="card-container-about-title">
     <h3 class="titulo-card">Como posso ajudar?</h3>
-    <div class="card-container">
+    <div class="card-container-about">
       <div class="card-about">
         <i class="fas fa-hands-helping"></i>
         <p class="about-text-list-card">Seja um voluntário:</p>
         <p class="about-text-card">Se você tem paixão pela natureza e deseja contribuir para a causa, entre em contato
           conosco para saber mais sobre as oportunidades de voluntariado.</p>
       </div>
-      <div class="card">
+      <div class="card-about">
         <i class="fas fa-donate"></i>
         <p class="about-text-list-card">Faça uma doação:</p>
         <p class="about-text-card">Sua contribuição financeira é essencial para que possamos continuar nosso trabalho de
           resgatar, cuidar e proteger a vida selvagem.</p>
       </div>
-      <div class="card">
+      <div class="card-about">
         <i class="fas fa-bullhorn"></i>
         <p class="about-text-list-card">Divulgue nossa causa:</p>
         <p class="about-text-card">Espalhe nossa mensagem! A conscientização é uma ferramenta poderosa para a mudança.
         </p>
       </div>
     </div>
-    <div class="container-about">
+    <div class="container-about-2">
       <section class="about">
         <h3 class="titulo-about">Junte-se a nós!</h3>
         <p class="about-text">Nós acreditamos que, com o apoio de todos, podemos construir um futuro mais sustentável e
