--- a/Front/vite-project/src/static/about.css
+++ b/Front/vite-project/src/static/about.css
@@ -1,4 +1,5 @@
-.container-about {
+.container-about,
+.container-about-2 {
   display: flex;
   justify-content: center;
   padding: 1.25em;
@@ -81,18 +82,18 @@
   font-size: .875rem;
 }
 
-.card-container-title {
+.card-container-about-title {
   margin: 0;
   padding: 1em;
   text-align: center;
 }
 
-.card-container-title,
-.card-container {
+.card-container-about-title,
+.card-container-about {
   background-color: var(--cor-animal-clara-2);
 }
 
-.card-container {
+.card-container-about {
   display: flex;
   gap: 1em;
   justify-content: center;
@@ -132,6 +133,8 @@
   line-height: 1.6;
 }
 
+
+
 @media screen and (min-width: 700px) {
 
   .about-image {
@@ -152,7 +155,7 @@
     font-size: 1rem;
   }
 
-  .card-container {
+  .card-container-about {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: nowrap;
@@ -201,30 +204,36 @@
     font-size: 1.15rem;
   }
 
-  .card-container {
+  .card-container-about {
     display: flex;
     justify-content: space-around;
     flex-wrap: nowrap;
-    margin-left: 10em;
-    margin-right: 10em;
+    margin-left: 1em;
+    margin-right: 1em;
+    height: 50vh;
   }
 
   .card-about i {
-    font-size: 3rem;
+    font-size: 2rem;
   }
 
   .card-about {
     box-sizing: content-box;
-    width: 20em;
+    width: 50em;
     height: 15em;
   }
 
   .about-text-list-card {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
 
   .about-text-card {
     font-size: 1rem;
   }
+
+  .container-about-2 {
+    height: 80vh;
+  }
+
 
 }
