adição da página de apadrinhamento, resolução do font-size do menu

--- a/Front/vite-project/src/static/animais_regioes.css
+++ b/Front/vite-project/src/static/animais_regioes.css
@@ -1,14 +1,38 @@
-
+.apadContent{
+  margin-top: 0.5vw;
+  margin-bottom: 2vw;
+}
+.apadContent h3{
+  font-weight: bolder;
+  display: block;
+  text-align: center;
+  margin-bottom: 1.5vw;
+  margin-top: 1.5vw;
+  justify-content: center;
+}
 .bd-anml {
   background-color: var(--cor-clara-1);
   overflow-x: hidden;
 }
-
+.btnapad{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 .title-anml, .subtitle-anml, .anml-name {
   color: var(--cor-escura-2);
   font-weight: 600;
 }
-
+.btnApad{
+  margin-top: 0.625em;
+  height: 2.5em;
+  background-color: #597814;
+  color: white;
+  border-radius: 15%;
+  width: min-content;
+  text-align: center;
+}
 .title-anml {
   margin: 1em 0;
 }
