--- a/Front/vite-project/src/templates/apadrinhamento.html
+++ b/Front/vite-project/src/templates/apadrinhamento.html
@@ -5,12 +5,13 @@
     <link rel="icon" type="jpg" href="../assets/images/logoIJ.png" />
     <link rel="stylesheet" href="../index.css"/>
     <link rel="stylesheet" href="../reset.css"/>
+    <link rel="stylesheet" href="../static/animais_regioes.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="../../index.js"></script>
-    <title>IJ</title>
+    <title>Apadrinhamento</title>
   </head>
   <body>
     <header>
@@ -81,7 +82,46 @@
         </div>
       </nav>
     </header> 
+    <section class="apadContent">
+      <h3><strong><u>Super promoção:</u> apenas 10 reais para cada animal por mês</strong></h3>
+      <section class="apadContent">
+        <div class="card-container">
+          <!-- Mammalia -->
+          <div class="carousel-item anml-card card-medium">
+            <img class = "anml-card-img" src="../assets/images/Animais/mamifero/onca/onapintada.jpg">
+            <h2 class="anml-name">Juma</h2>
+            <h4 class="anml-spe">Onça-pintada</h4>
+            <h5 class="anml-spe"><em class="sci-name-item">Panthera onca</em></h5>
+            <button type="submit" value="btnGerar" class="btnApad" onclick="receberPix()">apadrinhar</button>
+          </div>
+          <div class="carousel-item anml-card card-medium">
+            <img class = "anml-card-img" src="../assets/images/Animais/mamifero/tatucanastra/tatu_canastra.jpg">
+          <h2 class="anml-name">Fuleco</h2>
+          <h4 class="anml-spe">Tatu-canastra</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Priodontes maximus</em></h5>
+                        <button type="submit" value="btnGerar" class="btnApad" onclick="receberPix()">apadrinhar</button>
 
+          </div>
+          <div class="carousel-item anml-card card-medium">
+            <img class = "anml-card-img" src="../assets/images/Animais/mamifero/micoleao/micoleao2.jpg">
+            <h2 class="anml-name">Solar</h2>
+            <h4 class="anml-spe">Mico-leão-dourado</h4>
+            <h5 class="anml-spe"><em class="sci-name-item">Leontopithecus rosalia</em></h5>
+                        <button type="submit" value="btnGerar" class="btnApad" onclick="receberPix()">apadrinhar</button>
+
+          </div>
+          <div class="carousel-item anml-card card-medium">
+            <img class = "anml-card-img" src="../assets/images/Animais/ave/ararinha_azul/arararinhajade.jpg">
+          <h2 class="anml-name">Jade</h2>
+          <h4 class="anml-spe">Ararinha-azul</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Cyanopsitta spixii</em></h5>
+                        <button type="submit" value="btnGerar" class="btnApad" onclick="receberPix()">apadrinhar</button>
+
+          </div>
+      </section>
+      
+          
+    </section>
 
     <footer class="rodape">        
       <ul class="rodape__lista-contato">
