--- a/Front/vite-project/src/static/animais_regioes.css
+++ b/Front/vite-project/src/static/animais_regioes.css
@@ -1,10 +1,11 @@
-
 .bd-anml {
   background-color: var(--cor-clara-1);
   overflow-x: hidden;
 }
 
-.title-anml, .subtitle-anml, .anml-name {
+.title-anml,
+.subtitle-anml,
+.anml-name {
   color: var(--cor-escura-2);
   font-weight: 600;
 }
@@ -13,7 +14,8 @@
   margin: 1em 0;
 }
 
-.anml-name, .anml-spe {
+.anml-name,
+.anml-spe {
   margin: 0.2em 0;
   font-size: 1rem;
 }
@@ -55,13 +57,13 @@
   background-color: var(--cor-animal-clara-1);
 }
 
-.anml-card-img{
+.anml-card-img {
   box-sizing: content-box;
   width: 13em;
   height: 9em;
   text-align: center;
   align-items: center;
-  border-radius: 0.5em; 
+  border-radius: 0.5em;
 }
 
 .sci-name-item {
@@ -69,7 +71,7 @@
   font-size: 0.75rem;
 }
 
-.anml-data{
+.anml-data {
   display: flex;
   justify-content: center;
   margin: 0
@@ -103,12 +105,14 @@
   background-color: var(--cor-label-male);
 }
 
-.ext1, .ext2, .ext3 {
-  color: var(--cor-escura-2) 
+.ext1,
+.ext2,
+.ext3 {
+  color: var(--cor-escura-2)
 }
 
 .ext1 {
-  background-color: var(--cor-label-ext1); 
+  background-color: var(--cor-label-ext1);
 }
 
 .ext2 {
@@ -124,7 +128,7 @@
 }
 
 .ext6 {
-  background-color: var(--cor-label-ext6); 
+  background-color: var(--cor-label-ext6);
 }
 
 .mam {
@@ -139,7 +143,7 @@
   background-color: var(--cor-label-ave);
 }
 
-@media screen and (min-width: 390px){
+@media screen and (min-width: 390px) {
 
   .subtitle-anml {
     padding-top: 1em;
@@ -150,7 +154,7 @@
   }
 }
 
-@media screen and (min-width: 500px){
+@media screen and (min-width: 500px) {
 
   .subtitle-anml {
     padding-top: 1em;
@@ -161,31 +165,30 @@
   }
 }
 
-@media screen and (min-width: 700px){
+@media screen and (min-width: 700px) {
 
   .container-anml {
     height: 35vh;
   }
 }
 
-@media screen and (min-width: 800px){
+@media screen and (min-width: 800px) {
 
   .container-anml {
     height: 30vh;
   }
 }
 
-@media screen and (min-width: 1000px){
+@media screen and (min-width: 1000px) {
 
   .container-anml {
     height: 25vh;
   }
 }
 
-@media screen and (min-width: 1200px){
+@media screen and (min-width: 1200px) {
 
   .container-anml {
-    height: 45vh;
+    height: 55vh;
   }
 }
-
