--- a/Front/vite-project/src/templates/cadastro_voluntario.html
+++ b/Front/vite-project/src/templates/cadastro_voluntario.html
@@ -92,11 +92,11 @@
       <fieldset>
         <legend>Voluntário</legend>
         <label for="email">
-          email:
+          Email:
         </label>
         <input type="email" id="email" name="email" />
         <label for="psw">
-          senha:
+          Senha:
         </label>
         <input type="password" id="senha" name="senha">
 <input type="button" id="btnGerar" value="Enviar" onclick="envioVoluntario()" />
