--- a/Front/vite-project/src/templates/login.html
+++ b/Front/vite-project/src/templates/login.html
@@ -84,7 +84,7 @@
     </nav>
   </header> 
   <section id="titulo">
-    <h1><em><u>Login</u></em></h1>
+    <h1 class="titulologin"><em><u>Login</u></em></h1>
   </section>
   <section class="boxcad">
     <form name="cadastro" class="cadastro">
