--- a/Front/vite-project/src/static/cadastro_voluntario.css
+++ b/Front/vite-project/src/static/cadastro_voluntario.css
@@ -71,6 +71,11 @@ form{
     margin-bottom: 7%;
 }
 
+.tituloregistro{
+    font-size: 1.75rem;
+    margin-top: 20%;
+}
+
 .rodape{
     position: absolute;
     bottom: 0;
