--- a/Front/vite-project/src/templates/registro.html
+++ b/Front/vite-project/src/templates/registro.html
@@ -85,7 +85,7 @@
     </nav>
   </header> 
   <section id="titulo">
-    <h1><em><u>Registrar</u></em></h1>
+    <h1 class="tituloregistro"><em><u>Registrar</u></em></h1>
   </section>
   <section class="boxcad">
     <form name="cadastro" class="cadastro">
